# apertium-frp

./: .gitignore  AUTHORS  Makefile.am  README  apertium-frp.frp.acx  apertium-frp.frp.metadix  apertium-frp.frp.rlx  apertium-frp.pc.in  apertium-frp.post-frp.dix  configure.ac  modes.xml
test/: cuento-disam-expected.txt  cuento-input.txt  cuento-morph-expected.txt  cuento-tagger-expected.txt  tests.json
texts/: cuento.frp.txt
